fix alignment

--- a/src/Graphs/44TimelineAnimation/44TimelineAnimation.css
+++ b/src/Graphs/44TimelineAnimation/44TimelineAnimation.css
@@ -14,6 +14,7 @@
   padding: 0;
   text-align: center;
   width: 950px;
+  height: 500px;
 }
 
 
